Add color system, button component.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,12 @@
 @import '~@styles/reset.scss';
 
-.Root {
-  opacity: .2;
+.List {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+
+  & > *:not(:first-child) {
+    margin: 8px 0 0;
+  }
 }
