--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -2,6 +2,7 @@ $color-danger: #ee6c7e;
 $color-primary: #6781f4;
 $color-secondary: #8c67f4;
 $color-success: #55b242;
+$color-warning: #f8a652;
 
 $color-text: #26272a;
 $color-text-secondary: #7d7d7f;
