[FL-47] Add Form component / Add Input component / Add Action component / Add Fieldset component Add 'htmlFor' property to Typography component

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,16 @@
   }
 }
 
+.Row {
+  display: flex;
+  padding: 24px;
+
+  & > * {
+    margin: 0 16px 0 0;
+    max-width: 260px;
+  }
+}
+
 .List {
   align-items: flex-start;
   display: flex;
