--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,8 +1,31 @@
-$color-danger: #ee6c7e;
-$color-primary: #6781f4;
+// Blue
+$color-blue-300: #6781f4;
+$color-blue-200: #a4b3f8;
+$color-blue-50: #eff2fd;
+
+// Gray
+$color-gray-900: #26272a;
+$color-gray-800: #515255;
+$color-gray-700: #67686c;
+$color-gray-600: #7d7d7f;
+$color-gray-500: #a5a6aa;
+$color-gray-400: #c3c4c8;
+$color-gray-300: #e9e9e9;
+$color-gray-200: #f0f1f5;
+$color-gray-100: #f5f5f3;
+$color-gray-50: #fafbff;
+
+// Red
+$color-red-300: #ee6c7e;
+$color-red-200: #f5a7b2;
+$color-red-50: #fdf0f2;
+
+// Common
+$color-danger: $color-red-300;
+$color-primary: $color-blue-300;
 $color-secondary: #8c67f4;
 $color-success: #55b242;
 $color-warning: #f8a652;
 
-$color-text: #26272a;
-$color-text-secondary: #7d7d7f;
+$color-text: $color-gray-900;
+$color-text-secondary: $color-gray-700;
