--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,30 +1,30 @@
 @import '~@styles/colors.scss';
 
 @mixin colorFilledButton($color) {
-  background: rgba($color, .1);
+  background: rgba($color, 0.1);
   color: $color;
 
   &:active {
-    background: rgba($color, .1);
-    color: rgba($color, .6);
+    background: rgba($color, 0.1);
+    color: rgba($color, 0.6);
   }
 
   &:hover:not(:active) {
-    background: rgba($color, .2);
+    background: rgba($color, 0.2);
   }
 }
 
 @mixin colorOutlinedButton($color) {
-  border-color: rgba($color, .2);
+  border-color: rgba($color, 0.2);
   color: $color;
 
   &:active {
-    background: rgba($color, .05);
-    color: rgba($color, .6);
+    background: rgba($color, 0.05);
+    color: rgba($color, 0.6);
   }
 
   &:hover:not(:active) {
-    background: rgba($color, .2);
+    background: rgba($color, 0.2);
   }
 }
 
@@ -37,10 +37,10 @@
   font-weight: 600;
   height: 40px;
   justify-content: center;
-  letter-spacing: -.2px;
+  letter-spacing: -0.2px;
   min-width: 120px;
   text-decoration: none;
-  transition: background .2s, color .2s;
+  transition: background 0.2s, color 0.2s;
 
   &:hover {
     cursor: pointer;
@@ -63,16 +63,16 @@
         }
 
         &Default {
-          background: rgba($color-text, .1);
+          background: rgba($color-text, 0.1);
           color: $color-text-secondary;
 
           &:active {
-            background: rgba($color-text, .1);
-            color: rgba($color-text-secondary, .6);
+            background: rgba($color-text, 0.1);
+            color: rgba($color-text-secondary, 0.6);
           }
 
           &:hover:not(:active) {
-            background: rgba($color-text, .2);
+            background: rgba($color-text, 0.2);
           }
         }
 
@@ -105,16 +105,16 @@
 
       &.RootColor {
         &Default {
-          border-color: rgba($color-text, .1);
+          border-color: rgba($color-text, 0.1);
           color: $color-text-secondary;
 
           &:active {
-            background: rgba($color-text, .05);
-            color: rgba($color-text-secondary, .4);
+            background: rgba($color-text, 0.05);
+            color: rgba($color-text-secondary, 0.4);
           }
 
           &:hover:not(:active) {
-            background: rgba($color-text, .1);
+            background: rgba($color-text, 0.1);
           }
         }
 
@@ -144,4 +144,18 @@
 
 .Icon {
   font-size: 14px;
+}
+
+.Spinner {
+  animation: spin 0.8s linear infinite;
+  font-size: 20px;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
