--- a/src/components/Form/components/Input.scss
+++ b/src/components/Form/components/Input.scss
@@ -3,12 +3,11 @@
 .Root {
   display: flex;
   flex-direction: column;
-  max-width: 260px;
 
   &Is {
     &Disabled {
       .Container {
-        opacity: 0.6;
+        opacity: .6;
         pointer-events: none;
       }
     }
@@ -45,7 +44,7 @@
   border: 2px solid $color-gray-300;
   border-radius: 20px;
   height: 40px;
-  transition: all 0.2s;
+  transition: all .2s;
   width: 100%;
 
   &:hover {
@@ -94,7 +93,7 @@
   font-size: 14px;
   font-weight: 600;
   height: 100%;
-  letter-spacing: -0.2px;
+  letter-spacing: -.2px;
   padding: 0 20px;
   width: 100%;
 }
