--- a/src/views/Sign/Sign.transition.scss
+++ b/src/views/Sign/Sign.transition.scss
@@ -29,19 +29,19 @@
         .Content {
           opacity: 1;
           transform: translateY(0);
-          transition: all 0.8s 2s;
+          transition: all .8s 2s;
         }
 
         .Land1 {
-          transition: transform 1.6s 0.4s;
+          transition: transform 1.6s .4s;
         }
 
         .Land2 {
-          transition: transform 1.6s 0.4s ease-out;
+          transition: transform 1.6s .4s ease-out;
         }
 
         .Tree {
-          transition: transform 1.6s 0.4s;
+          transition: transform 1.6s .4s;
         }
 
         .Land1,
