Fix PR comments.

--- a/src/components/Form/components/Input.scss
+++ b/src/components/Form/components/Input.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
 
   &Is {
+    // @todo - need to request from the designer
     &Disabled {
       .Container {
         opacity: .6;
