--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -4,6 +4,7 @@ $color-blue-200: #a4b3f8;
 $color-blue-50: #eff2fd;
 
 // Gray
+$color-gray-1000: #000;
 $color-gray-900: #26272a;
 $color-gray-800: #515255;
 $color-gray-700: #67686c;
@@ -14,6 +15,7 @@ $color-gray-300: #e9e9e9;
 $color-gray-200: #f0f1f5;
 $color-gray-100: #f5f5f3;
 $color-gray-50: #fafbff;
+$color-gray-0: #fff;
 
 // Red
 $color-red-300: #ee6c7e;
