Added company menu.

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -6,6 +6,7 @@
 
 :global body {
   background-color: $color-gray-100;
+  color: $color-gray-800;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
