--- a/src/views/Main/Main.scss
+++ b/src/views/Main/Main.scss
@@ -2,6 +2,7 @@
 
 .Root {
   display: flex;
+  padding: 0 32px 32px 0;
   width: 100%;
 }
 
@@ -10,6 +11,7 @@
 }
 
 .Container {
+  display: flex;
   flex: 1 1 auto;
   max-width: calc(100% - 90px);
 }
