--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -8,10 +8,25 @@
 .Tbody {
   display: flex;
   flex-direction: column;
-  padding: 16px 28px;
+  padding: 16px 20px;
 
   .Tr {
     min-height: 60px;
+    padding: 0 8px;
+    transition: all .2s;
+
+    &:hover {
+      background: $color-blue-50;
+      border-radius: 8px;
+      cursor: pointer;
+
+      .Td {
+        & > button {
+          background: $color-gray-0;
+          border-color: $color-gray-0;
+        }
+      }
+    }
 
     &:not(:first-child) {
       margin: 12px 0 0;
