--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -17,10 +17,29 @@ $color-gray-100: #f5f5f3;
 $color-gray-50: #fafbff;
 $color-gray-0: #fff;
 
+// Green
+$color-green-500: #48b531;
+
+// Orange
+$color-orange-500: #fb681b;
+
+// Pink
+$color-pink-500: #d13bfb;
+
+// Purple
+$color-purple-500: #7c50f8;
+
 // Red
+$color-red-500: #fb4242;
 $color-red-300: #ee6c7e;
 $color-red-200: #f5a7b2;
 $color-red-50: #fdf0f2;
+
+// Sky
+$color-sky-500: #0089ff;
+
+// Yellow
+$color-yellow-500: #f47e05;
 
 // Common
 $color-danger: $color-red-300;
