--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -50,3 +50,6 @@ $color-warning: #f8a652;
 
 $color-text: $color-gray-900;
 $color-text-secondary: $color-gray-700;
+
+// Sources
+$color-vk: #4a76a8;
