--- a/src/components/Status/Status.scss
+++ b/src/components/Status/Status.scss
@@ -1,31 +1,23 @@
 @import '~@styles/colors.scss';
 
 @mixin colorTag($color) {
-  box-shadow: 0 0 0 3px rgba($color, .2);
+  .Dot {
+    box-shadow: 0 0 0 3px rgba($color, .2);
 
-  &::after {
-    background: $color;
-    box-shadow: 0 2px 3px rgba($color, .6);
+    &::after {
+      background: $color;
+      box-shadow: 0 2px 3px rgba($color, .6);
+    }
+  }
+
+  .Title {
+    color: $color;
   }
 }
 
 .Root {
   align-items: center;
-  background: $color-gray-0;
-  border-radius: 100%;
   display: flex;
-  height: 14px;
-  justify-content: center;
-  position: relative;
-  width: 14px;
-
-  &::after {
-    border-radius: 100%;
-    content: '';
-    display: block;
-    height: 10px;
-    width: 10px;
-  }
 
   &Color {
     &Blue {
@@ -60,4 +52,28 @@
       @include colorTag($color-yellow-500);
     }
   }
+}
+
+.Dot {
+  align-items: center;
+  background: $color-gray-0;
+  border-radius: 100%;
+  display: flex;
+  height: 14px;
+  justify-content: center;
+  position: relative;
+  width: 14px;
+
+  &::after {
+    border-radius: 100%;
+    content: '';
+    display: block;
+    height: 10px;
+    width: 10px;
+  }
+}
+
+.Title {
+  margin: 0 0 0 12px;
+  text-transform: capitalize;
 }
