--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 600;
+  letter-spacing: -.2px;
   margin: 0;
   padding: 0;
 }
