Connected disable/enable buttons to GraphQL. Handle channel status.

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -39,6 +39,7 @@
   justify-content: center;
   letter-spacing: -.2px;
   min-width: 120px;
+  padding: 0 16px;
   text-decoration: none;
   transition: background .2s, color .2s;
 
@@ -53,6 +54,7 @@
 
     &Icon {
       min-width: 40px;
+      padding: 0;
       width: 40px;
     }
   }
