--- a/src/components/Form/components/Select/Select.scss
+++ b/src/components/Form/components/Select/Select.scss
@@ -1,5 +1,9 @@
 @import '~@styles/colors';
 
+.Root {
+  position: relative;
+}
+
 .Caret {
   align-items: center;
   border: 2px solid rgba($color-primary, .4);
@@ -7,13 +11,16 @@
   display: flex;
   height: 30px;
   justify-content: center;
+  margin: 0 4px;
   width: 30px;
 
   &Circle {
     background: rgba($color-primary, .1);
     border-radius: 100%;
-    height: 22px;
-    width: 22px;
+    height: 26px;
+    transform: scale(.84);
+    transition: all .2s;
+    width: 26px;
   }
 
   &Icon {
@@ -35,6 +42,18 @@
   &:hover {
     background: $color-blue-50;
     border-color: $color-blue-200;
+
+    .CaretCircle {
+      background: rgba($color-primary, .2);
+      transform: scale(1);
+    }
+  }
+
+  &Is {
+    &Focused {
+      background: $color-gray-100;
+      border-color: $color-blue-200;
+    }
   }
 }
 
@@ -57,5 +76,38 @@
 
   &:hover {
     cursor: pointer;
+  }
+}
+
+.Menu {
+  background: $color-gray-0;
+  border: 1px solid rgba($color-primary, .2);
+  border-radius: 20px;
+  box-shadow: 0 20px 40px 0 rgba($color-gray-1000, .1);
+  margin: 20px 0 0;
+  padding: 20px 12px;
+  position: absolute;
+  width: 100%;
+}
+
+.Value {
+  &Container {
+    align-items: center;
+    display: flex;
+    flex: 1 1 auto;
+    overflow: hidden;
+    padding: 0 0 0 16px;
+    position: relative;
+    width: 100%;
+
+    & input {
+      color: $color-gray-800;
+      font-family: inherit;
+      font-weight: inherit;
+    }
+  }
+
+  &Single {
+    color: $color-gray-800 !important;
   }
 }
