Defined types for Select.

--- a/src/components/Form/components/Select/components/Option.scss
+++ b/src/components/Form/components/Select/components/Option.scss
@@ -62,6 +62,10 @@
 
   &Is {
     &Disabled {
+      .Avatar {
+        opacity: .5;
+      }
+
       .Control {
         pointer-events: none;
       }
