--- a/src/components/Form/components/Select/components/Common.scss
+++ b/src/components/Form/components/Select/components/Common.scss
@@ -57,6 +57,37 @@
   }
 }
 
+.Empty {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 32px 0;
+
+  &Description {
+    color: $color-gray-600;
+    margin: 12px 0 0;
+    max-width: 160px;
+    text-align: center;
+  }
+
+  &Icon {
+    align-items: center;
+    border: 4px solid rgba($color-primary, .5);
+    border-radius: 100%;
+    color: $color-primary;
+    display: flex !important;
+    font-size: 24px;
+    height: 60px;
+    justify-content: center;
+    width: 60px;
+  }
+
+  &Title {
+    margin: 20px 0 0;
+  }
+}
+
 .Header {
   align-items: center;
   display: flex;
@@ -85,7 +116,7 @@
   border-radius: 20px;
   box-shadow: 0 20px 40px 0 rgba($color-gray-1000, .1);
   margin: 20px 0 0;
-  padding: 20px 12px;
+  padding: 16px 12px;
   position: absolute;
   width: 100%;
 }
@@ -95,8 +126,8 @@
     align-items: center;
     display: flex;
     flex: 1 1 auto;
+    margin: 0 0 0 2px;
     overflow: hidden;
-    padding: 0 0 0 16px;
     position: relative;
     width: 100%;
 
@@ -105,9 +136,11 @@
       font-family: inherit;
       font-weight: inherit;
     }
-  }
 
-  &Single {
-    color: $color-gray-800 !important;
+    &Is {
+      &Empty {
+        margin: 0 0 0 16px;
+      }
+    }
   }
 }
