--- a/src/components/Form/components/Select/components/common.scss
+++ b/src/components/Form/components/Select/components/common.scss
@@ -2,7 +2,7 @@
 
 .Caret {
   align-items: center;
-  border: 2px solid rgba($color-primary, 0.4);
+  border: 2px solid rgba($color-primary, .4);
   border-radius: 100%;
   display: flex;
   height: 30px;
@@ -12,7 +12,7 @@
 
   &Icon {
     align-items: center;
-    background: rgba($color-primary, 0.1);
+    background: rgba($color-primary, .1);
     border-radius: 100%;
     color: $color-primary;
     composes: CaretIcon from '../Select.scss';
@@ -20,8 +20,8 @@
     font-size: 18px;
     height: 26px;
     justify-content: center;
-    text-shadow: 0 2px 3px rgba($color-primary, 0.4);
-    transition: all 0.2s;
+    text-shadow: 0 2px 3px rgba($color-primary, .4);
+    transition: all .2s;
     width: 26px;
   }
 }
@@ -42,7 +42,7 @@
 
   &Icon {
     align-items: center;
-    border: 4px solid rgba($color-primary, 0.5);
+    border: 4px solid rgba($color-primary, .5);
     border-radius: 100%;
     color: $color-primary;
     display: flex !important;
