--- a/src/views/Fields/containers/Form.scss
+++ b/src/views/Fields/containers/Form.scss
@@ -1,25 +1,18 @@
 @import '~@styles/colors.scss';
 
-.Root {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-
 .Actions {
   margin: 40px 0 0;
   width: 100%;
 }
 
-.Description {
-  color: $color-gray-600;
-  max-width: 220px;
-  text-align: center;
+.Container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .Fieldset {
   display: grid;
   grid-row-gap: 20px;
-  margin: 52px 0 0;
   width: 100%;
 }
