--- a/src/components/Form/components/Select/Select.scss
+++ b/src/components/Form/components/Select/Select.scss
@@ -2,6 +2,7 @@
 
 .Root {
   position: relative;
+  width: 100%;
 
   :global .react-select {
     &__control {
@@ -69,6 +70,11 @@
       box-shadow: 0 20px 40px 0 rgba($color-gray-1000, .1);
       margin: 12px 0 0;
       padding: 16px 12px;
+    }
+
+    &__menu-list {
+      display: grid;
+      grid-row-gap: 4px;
     }
 
     &__value-container {
