--- a/src/components/Form/components/Select/components/Option.scss
+++ b/src/components/Form/components/Select/components/Option.scss
@@ -9,7 +9,7 @@
 
   .Control {
     &:hover {
-      background: rgba($color, .2);
+      background: rgba($color, .1);
     }
   }
 
@@ -95,6 +95,18 @@
         height: 40px;
       }
     }
+
+    &Description {
+      .Avatar {
+        height: 38px;
+        width: 38px;
+      }
+
+      .Control {
+        border-radius: 24px;
+        height: 48px;
+      }
+    }
   }
 }
 
@@ -123,11 +135,8 @@
 }
 
 .Description {
-  color: $color-gray-600;
-  composes: OptionDescription from '../Select.scss';
-  font-weight: 500;
-  line-height: 22px;
-  margin: 8px;
+  color: $color-gray-500;
+  margin: 2px 0 0;
 }
 
 .Icon {
@@ -152,4 +161,12 @@
     transition: all .2s;
     width: 10px;
   }
+}
+
+.Info {
+  color: $color-gray-600;
+  composes: OptionDescription from '../Select.scss';
+  font-weight: 500;
+  line-height: 22px;
+  margin: 8px;
 }
