--- a/src/components/Form/components/Select/Select.scss
+++ b/src/components/Form/components/Select/Select.scss
@@ -1,30 +1,124 @@
 @import '~@styles/colors';
 
+@mixin colorFilled($color) {
+  &.RootVariantFilled {
+    :global .react-select {
+      &__control {
+        background: rgba($color, .1);
+      }
+    }
+  }
+}
+
 .Root {
-  position: relative;
   width: 100%;
+
+  &Color {
+    &Blue {
+      @include colorFilled($color-primary);
+    }
+
+    &Green {
+      @include colorFilled($color-green-500);
+    }
+
+    &Orange {
+      @include colorFilled($color-orange-500);
+    }
+
+    &Pink {
+      @include colorFilled($color-pink-500);
+    }
+
+    &Purple {
+      @include colorFilled($color-purple-500);
+    }
+
+    &Red {
+      @include colorFilled($color-red-500);
+    }
+
+    &Sky {
+      @include colorFilled($color-sky-500);
+    }
+
+    &Yellow {
+      @include colorFilled($color-yellow-500);
+    }
+  }
+
+  &Is {
+    &Disabled {
+      pointer-events: none;
+
+      .Caret {
+        display: none;
+      }
+    }
+
+    &Loaded {
+      pointer-events: none;
+
+      .Caret {
+        display: none;
+      }
+    }
+  }
+
+  &Variant {
+    &Filled {
+      height: 32px;
+      min-width: 112px;
+
+      :global .react-select {
+        &__control {
+          background: rgba($color-primary, .1);
+          border: 0;
+          border-radius: 16px;
+          min-height: 32px;
+
+          &--is-focused {
+            box-shadow: none;
+          }
+        }
+      }
+    }
+
+    &Outlined {
+      :global .react-select {
+        &__control {
+          background: $color-gray-100;
+          border: 2px solid $color-gray-300;
+          border-radius: 20px;
+          min-height: 40px;
+          transition: all .2s;
+
+          &:hover {
+            background: $color-blue-50;
+            border-color: $color-blue-200;
+
+            :local .CaretIcon {
+              transform: scale(1);
+            }
+          }
+
+          &--is-focused {
+            background: $color-gray-100;
+            border-color: $color-blue-200 !important;
+            box-shadow: none;
+          }
+        }
+      }
+    }
+  }
 
   :global .react-select {
     &__control {
-      background: $color-gray-100;
-      border: 2px solid $color-gray-300;
-      border-radius: 20px;
-      min-height: 40px;
-      transition: all .2s;
+      flex: 1 1 auto;
+      width: 100%;
 
       &:hover {
-        background: $color-blue-50;
-        border-color: $color-blue-200;
-
-        :local .CaretIcon {
-          transform: scale(1);
-        }
-      }
-
-      &--is-focused {
-        background: $color-gray-100;
-        border-color: $color-blue-200 !important;
-        box-shadow: none;
+        cursor: pointer;
       }
     }
 
@@ -40,6 +134,10 @@
 
       &:not(:first-child) {
         border-top: 2px solid rgba($color-primary, .1);
+      }
+
+      & > * {
+        width: 100%;
       }
 
       :local .OptionDescription {
@@ -69,7 +167,10 @@
       border-radius: 20px;
       box-shadow: 0 20px 40px 0 rgba($color-gray-1000, .1);
       margin: 12px 0 0;
+      max-width: 320px;
+      min-width: 100%;
       padding: 16px 12px;
+      width: auto;
     }
 
     &__menu-list {
@@ -88,8 +189,20 @@
   }
 }
 
+.Caret {
+  display: flex;
+}
+
 .CaretIcon {
   transform: scale(.84);
+}
+
+.Container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
 }
 
 .OptionDescription {
