--- a/src/components/Form/components/Select/components/Option.scss
+++ b/src/components/Form/components/Select/components/Option.scss
@@ -146,7 +146,6 @@
   display: flex;
   height: 20px;
   justify-content: center;
-  margin: 0 12px 0 0;
   transition: all .2s;
   width: 20px;
 
@@ -169,4 +168,8 @@
   font-weight: 500;
   line-height: 22px;
   margin: 8px;
+}
+
+.Label {
+  margin: 0 12px;
 }
