--- a/src/components/Form/components/Select/components/common.scss
+++ b/src/components/Form/components/Select/components/common.scss
@@ -1,14 +1,76 @@
 @import '~@styles/colors';
 
+@mixin caretFilledColor($color) {
+  &.CaretVariantFilled {
+    background: $color;
+  }
+}
+
+@mixin spinnerColor($color) {
+  color: $color;
+}
+
 .Caret {
   align-items: center;
-  border: 2px solid rgba($color-primary, .4);
   border-radius: 100%;
+  composes: Caret from '../Select.scss';
   display: flex;
-  height: 30px;
   justify-content: center;
   margin: 0 4px;
-  width: 30px;
+
+  &Color {
+    &Blue {
+      @include caretFilledColor($color-primary);
+    }
+
+    &Green {
+      @include caretFilledColor($color-green-500);
+    }
+
+    &Orange {
+      @include caretFilledColor($color-orange-500);
+    }
+
+    &Pink {
+      @include caretFilledColor($color-pink-500);
+    }
+
+    &Purple {
+      @include caretFilledColor($color-purple-500);
+    }
+
+    &Red {
+      @include caretFilledColor($color-red-500);
+    }
+
+    &Sky {
+      @include caretFilledColor($color-sky-500);
+    }
+
+    &Yellow {
+      @include caretFilledColor($color-yellow-500);
+    }
+  }
+
+  &Variant {
+    &Filled {
+      height: 22px;
+      width: 22px;
+
+      .CaretIcon {
+        background: none;
+        color: $color-gray-0;
+        font-size: 16px;
+        text-shadow: none;
+      }
+    }
+
+    &Outlined {
+      border: 2px solid rgba($color-primary, .4);
+      height: 30px;
+      width: 30px;
+    }
+  }
 
   &Icon {
     align-items: center;
@@ -54,5 +116,56 @@
 
   &Title {
     margin: 20px 0 0;
+  }
+}
+
+.Spinner {
+  animation: spin .8s linear infinite;
+  color: $color-primary;
+  font-size: 20px;
+  margin: 0 4px;
+
+  &Color {
+    &Blue {
+      @include spinnerColor($color-primary);
+    }
+
+    &Green {
+      @include spinnerColor($color-green-500);
+    }
+
+    &Orange {
+      @include spinnerColor($color-orange-500);
+    }
+
+    &Pink {
+      @include spinnerColor($color-pink-500);
+    }
+
+    &Purple {
+      @include spinnerColor($color-purple-500);
+    }
+
+    &Red {
+      @include spinnerColor($color-red-500);
+    }
+
+    &Sky {
+      @include spinnerColor($color-sky-500);
+    }
+
+    &Yellow {
+      @include spinnerColor($color-yellow-500);
+    }
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
