--- a/src/components/Form/components/common.scss
+++ b/src/components/Form/components/common.scss
@@ -7,6 +7,7 @@
   line-height: 18px;
   margin: 8px 0 0;
   padding: 0 20px;
+  width: 100%;
 }
 
 .Header {
@@ -15,6 +16,7 @@
   justify-content: space-between;
   margin: 0 0 12px;
   padding: 0 20px;
+  width: 100%;
 }
 
 .Label {
