--- a/src/views/Main/components/Company.scss
+++ b/src/views/Main/components/Company.scss
@@ -11,7 +11,7 @@
 
   &Is {
     &Selected {
-      .Cover {
+      .Avatar {
         box-shadow: 0 0 0 4px rgba($color-primary, .4);
       }
 
@@ -22,19 +22,12 @@
   }
 }
 
-.Cover {
-  align-items: center;
-  background: $color-gray-300;
-  border: 3px solid $color-gray-0;
+.Avatar {
+  border: 2px solid $color-gray-0;
   border-radius: 100%;
-  color: $color-gray-600;
-  display: flex;
-  height: 46px;
-  justify-content: center;
-  position: relative;
-  top: -3px;
+  height: 44px;
   transition: all .2s;
-  width: 46px;
+  width: 44px;
 }
 
 .Notifications {
