Added subscriber container.

--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -21,6 +21,10 @@
       @include colorPlug($color-primary);
     }
 
+    &Gray {
+      @include colorPlug($color-gray-500);
+    }
+
     &Green {
       @include colorPlug($color-green-500);
     }
