--- a/src/views/Company/Company.scss
+++ b/src/views/Company/Company.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
+  margin: 0 32px 32px 0;
   max-width: calc(100% - 260px);
 }
 
@@ -29,4 +30,11 @@
   flex-direction: column;
   padding: 0 40px;
   width: 260px;
+}
+
+.Subscriber {
+  display: flex;
+  flex: 0 0 330px;
+  flex-direction: column;
+  z-index: 2;
 }
