--- a/src/containers/Subscriber/Subscriber.scss
+++ b/src/containers/Subscriber/Subscriber.scss
@@ -5,6 +5,7 @@
   border-radius: 30px 0 0 30px;
   box-shadow: -20px 0 40px rgba($color-gray-1000, .1);
   height: 100%;
+  overflow: hidden;
   padding: 40px;
   position: relative;
   width: 100%;
@@ -32,6 +33,48 @@
   width: 100%;
 }
 
+.Slider {
+  margin: 28px -40px;
+  padding: 0 40px;
+  position: relative;
+  width: calc(100% + 80px);
+
+  &Variant {
+    &Fields {
+      .Track {
+        transform: translateX(calc(-50% - 20px));
+
+        & > div {
+          &:first-child {
+            opacity: 0;
+          }
+
+          &:last-child {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+}
+
 .Tabs {
   margin: 20px 0 0;
+}
+
+.Track {
+  display: grid;
+  grid-column-gap: 40px;
+  grid-template-columns: repeat(2, 1fr);
+  transition: all .4s;
+  width: calc(200% + 40px);
+
+  & > div {
+    opacity: 0;
+    transition: all .4s;
+
+    &:first-child {
+      opacity: 1;
+    }
+  }
 }
