--- a/src/containers/Subscriber/Subscriber.scss
+++ b/src/containers/Subscriber/Subscriber.scss
@@ -1,14 +1,22 @@
 @import '~@styles/colors';
 
 .Root {
-  background: $color-gray-0;
-  border-radius: 30px 0 0 30px;
-  box-shadow: -20px 0 40px rgba($color-gray-1000, .1);
-  height: 100%;
-  overflow: hidden;
-  padding: 40px;
+  flex: 0 0 0;
   position: relative;
-  width: 100%;
+  transition: all .2s;
+  width: 0;
+
+  &Is {
+    &Opened {
+      flex: 0 0 330px;
+
+      .Wrapper {
+        opacity: 1;
+        transform: translateX(0);
+        visibility: visible;
+      }
+    }
+  }
 }
 
 .Actions {
@@ -23,6 +31,7 @@
   position: absolute;
   right: 40px;
   top: 24px;
+  z-index: 2;
 }
 
 .Content {
@@ -77,4 +86,19 @@
       opacity: 1;
     }
   }
+}
+
+.Wrapper {
+  background: $color-gray-0;
+  border-radius: 30px 0 0 30px;
+  box-shadow: -20px 0 40px rgba($color-gray-1000, .1);
+  height: 100%;
+  opacity: 0;
+  overflow: hidden;
+  padding: 40px;
+  position: relative;
+  transform: translateX(100%);
+  transition: all .4s;
+  visibility: hidden;
+  width: 330px;
 }
