--- a/src/views/General/General.scss
+++ b/src/views/General/General.scss
@@ -1,41 +1,40 @@
 @import '~@styles/colors.scss';
 
+.Root {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .Container {
+  align-items: center;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
 }
 
-.CompanyName {
-  color: $color-blue-300;
+.Description {
+  margin: 4px 0 0;
 }
 
-.CompanyNameBlock {
-  margin-top: 12px;
-}
-
-.CompanyNameBlock,
 .Description,
-.Title {
-  margin-left: 20px;
-}
-
-.Description {
-  margin-top: 8px;
-}
-
-.General {
-  align-items: center;
-  display: flex;
-  padding: 76px 0 0 0;
-}
-
-.Forms {
-  align-items: center;
-  display: flex;
-  padding: 76px 0 0 0;
-}
-
-.Title,
-.Description {
+.Label {
   color: $color-gray-600;
+}
+
+.Info {
+  margin: 0 0 28px;
+  padding: 0 20px;
+}
+
+.Name {
+  color: $color-primary;
+}
+
+.Title {
+  color: $color-gray-900;
+  margin: 4px 0 0;
+}
+
+.Wrapper {
+  display: grid;
+  grid-row-gap: 40px;
 }
