--- a/src/components/Form/components/Select/components/Option.scss
+++ b/src/components/Form/components/Select/components/Option.scss
@@ -120,6 +120,7 @@
   align-items: center;
   border-radius: 15px;
   display: flex;
+  font-weight: 600;
   height: 30px;
   padding: 0 6px;
   transition: all .2s;
