--- a/src/views/Company/containers/Menu.scss
+++ b/src/views/Company/containers/Menu.scss
@@ -18,6 +18,7 @@
   border-radius: 20px;
   color: $color-gray-600;
   display: flex;
+  font-weight: 600;
   letter-spacing: -.2px;
   padding: 0 20px;
   text-decoration: none;
