--- a/src/components/Form/components/Select/components/Option.scss
+++ b/src/components/Form/components/Select/components/Option.scss
@@ -1,6 +1,6 @@
 @import '~@styles/colors';
 
-@mixin colorControl($color) {
+@mixin color($color) {
   &.RootIsSelected {
     .Label {
       color: $color;
@@ -26,39 +26,7 @@
 .Root {
   width: 100%;
 
-  &Color {
-    &Blue {
-      @include colorControl($color-primary);
-    }
-
-    &Green {
-      @include colorControl($color-green-500);
-    }
-
-    &Orange {
-      @include colorControl($color-orange-500);
-    }
-
-    &Pink {
-      @include colorControl($color-pink-500);
-    }
-
-    &Purple {
-      @include colorControl($color-purple-500);
-    }
-
-    &Red {
-      @include colorControl($color-red-500);
-    }
-
-    &Sky {
-      @include colorControl($color-sky-500);
-    }
-
-    &Yellow {
-      @include colorControl($color-yellow-500);
-    }
-  }
+  @include coloring;
 
   &Is {
     &Disabled {
