--- a/src/components/Page/components/Wrapper.scss
+++ b/src/components/Page/components/Wrapper.scss
@@ -14,7 +14,7 @@
   flex-direction: column;
   max-height: calc(100% - 90px);
   overflow-x: visible;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 .Header {
