--- a/src/components/Tabs/components/Item.scss
+++ b/src/components/Tabs/components/Item.scss
@@ -4,6 +4,7 @@
   align-items: center;
   color: $color-gray-500;
   display: flex;
+  font-weight: 600;
   justify-content: center;
   position: relative;
   transition: all .2s;
