--- a/src/containers/Subscriber/components/Field/Field.scss
+++ b/src/containers/Subscriber/components/Field/Field.scss
@@ -1,6 +1,6 @@
 @import '~@styles/colors';
 
-@mixin colorSubscriberField($color) {
+@mixin color($color) {
   &:hover {
     background: $color-gray-200; // rgba($color, .1);
   }
@@ -19,6 +19,8 @@
   position: relative;
   transition: all .2s;
 
+  @include coloring;
+
   &:hover {
     cursor: pointer;
 
@@ -33,40 +35,6 @@
 
     .Value {
       color: $color-gray-800;
-    }
-  }
-
-  &Color {
-    &Blue {
-      @include colorSubscriberField($color-primary);
-    }
-
-    &Green {
-      @include colorSubscriberField($color-green-500);
-    }
-
-    &Orange {
-      @include colorSubscriberField($color-orange-500);
-    }
-
-    &Pink {
-      @include colorSubscriberField($color-pink-500);
-    }
-
-    &Purple {
-      @include colorSubscriberField($color-purple-500);
-    }
-
-    &Red {
-      @include colorSubscriberField($color-red-500);
-    }
-
-    &Sky {
-      @include colorSubscriberField($color-sky-500);
-    }
-
-    &Yellow {
-      @include colorSubscriberField($color-yellow-500);
     }
   }
 }
