--- a/src/views/General/General.scss
+++ b/src/views/General/General.scss
@@ -1,6 +1,7 @@
 @import '~@styles/colors.scss';
 
 .Root {
+  column-gap: 32px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -25,4 +26,5 @@
 .Wrapper {
   display: grid;
   grid-row-gap: 40px;
+  max-width: 440px;
 }
