--- a/src/components/Notification/Notification.scss
+++ b/src/components/Notification/Notification.scss
@@ -1,56 +1,43 @@
 @import '~@styles/colors.scss';
 
+.Description {
+  color: $color-gray-600;
+  height: fit-content;
+  width: fit-content;
+}
+
+.Icon {
+  border: 2px solid $color-blue-200;
+  border-radius: 50%;
+  display: flex;
+  flex: 0 0 40px;
+  height: 40px;
+  justify-content: flex-start;
+  margin: 0 20px 0 0;
+  width: 40px;
+}
+
+.Info {
+  display: block;
+  justify-content: flex-start;
+}
+
 .Root {
-  align-items: center;
   background-color: $color-gray-0;
   border-radius: 20px;
   box-shadow: 0 20px 40px 0 rgba($color-gray-1000, .1);
   display: flex;
   height: fit-content;
   justify-content: space-evenly;
-  margin: 20px 20px;
-  max-height: 30vh;
-  padding: 20px 20px 20px 20px;
-  width: 550px;
-}
-
-.Info {
-  align-items: flex-start;
-  margin-bottom: 20px;
-}
-
-.Icon {
-  align-items: center;
-  border: 2px solid $color-blue-200;
-  border-radius: 50%;
-  display: flex;
-  height: 40px;
-  justify-content: center;
-  margin-right: 20px;
-  width: 40px;
+  margin: 20px;
+  padding: 20px;
+  width: fit-content;
 }
 
 .Title {
   color: $color-gray-900;
-  font-size: 14px;
-  font-stretch: normal;
-  font-style: normal;
   font-weight: 600;
-  height: 18px;
-  letter-spacing: -.2px;
-  line-height: normal;
+  height: fit-content;
   margin: 0 0 4px 0;
-  width: 400px;
-}
-
-.Description {
-  color: $color-gray-600;
-  font-size: 12px;
-  font-stretch: normal;
-  font-style: normal;
-  font-weight: 500;
-  height: 15px;
-  letter-spacing: normal;
-  line-height: normal;
-  width: 400px;
+  width: fit-content;
 }
