--- a/src/components/Notification/Notification.scss
+++ b/src/components/Notification/Notification.scss
@@ -1,29 +1,7 @@
 @import '~@styles/colors.scss';
 
-.Description {
-  color: $color-gray-600;
-  height: fit-content;
-  width: fit-content;
-}
-
-.Icon {
-  border: 2px solid $color-blue-200;
-  border-radius: 50%;
-  display: flex;
-  flex: 0 0 40px;
-  height: 40px;
-  justify-content: flex-start;
-  margin: 0 20px 0 0;
-  width: 40px;
-}
-
-.Info {
-  display: block;
-  justify-content: flex-start;
-}
-
 .Root {
-  background-color: $color-gray-0;
+  background: $color-gray-0;
   border-radius: 20px;
   box-shadow: 0 20px 40px 0 rgba($color-gray-1000, .1);
   display: flex;
@@ -31,13 +9,17 @@
   justify-content: space-evenly;
   margin: 20px;
   padding: 20px;
-  width: fit-content;
 }
 
-.Title {
-  color: $color-gray-900;
-  font-weight: 600;
-  height: fit-content;
-  margin: 0 0 4px 0;
-  width: fit-content;
+.Description {
+  color: $color-gray-600;
+}
+
+.Icon {
+  border: 2px solid $color-blue-200;
+  border-radius: 100%;
+  flex: 0 0 40px;
+  height: 40px;
+  margin: 0 20px 0 0;
+  width: 40px;
 }
