--- a/src/views/Profile/Profile.scss
+++ b/src/views/Profile/Profile.scss
@@ -12,6 +12,13 @@
   margin: 0 32px 32px 0;
 }
 
+.Grid {
+  column-gap: 32px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+}
+
 .Logo {
   align-items: center;
   display: flex;
