--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -10,6 +10,8 @@
 
 .Root {
   align-items: center;
+  border: 2px solid $color-gray-0;
+  border-radius: 100%;
   display: flex;
   height: 40px;
   justify-content: center;
