--- a/src/views/Channel/containers/Info/Info.scss
+++ b/src/views/Channel/containers/Info/Info.scss
@@ -1,8 +1,7 @@
-@import '~@styles/colors.scss';
-
 .Root {
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 76px 0 0 0;
+  padding: 76px 24px;
 }
