--- a/src/containers/Subscriber/Subscriber.scss
+++ b/src/containers/Subscriber/Subscriber.scss
@@ -1,14 +1,17 @@
 @import '~@styles/colors';
 
 .Root {
+  border-radius: 30px 0 0 30px;
   flex: 0 0 0;
+  overflow: hidden;
   position: relative;
-  transition: all .2s;
   width: 0;
 
   &Is {
     &Opened {
+      box-shadow: -20px 0 40px rgba($color-gray-1000, .1);
       flex: 0 0 330px;
+      transition: flex .2s, box-shadow .2s .3s ease-out;
 
       .Wrapper {
         opacity: 1;
@@ -90,8 +93,6 @@
 
 .Wrapper {
   background: $color-gray-0;
-  border-radius: 30px 0 0 30px;
-  box-shadow: -20px 0 40px rgba($color-gray-1000, .1);
   height: 100%;
   opacity: 0;
   overflow: hidden;
