--- a/src/views/Company/Company.scss
+++ b/src/views/Company/Company.scss
@@ -1,6 +1,5 @@
 .Root {
   display: flex;
-  overflow: hidden;
   width: 100%;
 }
 
@@ -16,6 +15,12 @@
   flex-direction: column;
   margin: 0 32px 32px 0;
   max-width: calc(100% - 260px);
+}
+
+.Menu {
+  margin: 0 0 60px;
+  position: sticky;
+  top: 0;
 }
 
 .Sidebar {
