--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -53,7 +53,8 @@ $color-text: $color-gray-900;
 $color-text-secondary: $color-gray-700;
 
 // Sources
-$color-vk: #4a76a8;
+$color-telegram: #08c;
+$color-vk: #2787f5;
 
 // @todo - can be generated using a loop
 $coloring-variants: (
