--- a/src/views/Channel/Source/components/Info.scss
+++ b/src/views/Channel/Source/components/Info.scss
@@ -12,16 +12,16 @@
 
 .Field {
   font-weight: 600;
-
-  &Label {
-    color: $color-gray-500;
-    font-weight: 500;
-    margin: 0 8px 0 0;
-  }
 }
 
 .Info {
   display: grid;
   margin: 0 0 0 52px;
   row-gap: 8px;
+}
+
+.Label {
+  color: $color-gray-500;
+  font-weight: 500;
+  margin: 0 8px 0 0;
 }
