--- a/src/views/Company/Company.scss
+++ b/src/views/Company/Company.scss
@@ -1,4 +1,5 @@
 .Root {
+  align-items: flex-start;
   display: flex;
   width: 100%;
 }
@@ -13,14 +14,13 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  margin: 0 32px 32px 0;
+  height: 100%;
   max-width: calc(100% - 260px);
+  padding: 0 32px 32px 0;
 }
 
 .Menu {
   margin: 0 0 60px;
-  position: sticky;
-  top: 0;
 }
 
 .Sidebar {
@@ -28,6 +28,8 @@
   flex: 0 0 260px;
   flex-direction: column;
   padding: 0 40px;
+  position: sticky;
+  top: 0;
   width: 260px;
 }
 
@@ -35,6 +37,7 @@
   display: flex;
   flex: 0 0 330px;
   flex-direction: column;
+  height: 100%;
   max-width: 330px;
   z-index: 2;
 }
