--- a/src/views/Dialog/containers/DialogHeader.scss
+++ b/src/views/Dialog/containers/DialogHeader.scss
@@ -4,19 +4,18 @@
   align-items: center;
   border-bottom: solid 1px $color-gray-100;
   display: flex;
-  flex-direction: row;
   height: 80px;
   justify-content: space-between;
-  padding: 25px 0;
+  padding: 24px 0;
 }
 
-.ActionBlock {
+.Action {
   align-items: center;
   display: flex;
-  flex-direction: row;
 }
 
-.Icon {
+.Notification,
+.Search {
   border: none;
   margin: 0 30px 0 0;
 }
@@ -28,7 +27,6 @@
 .InfoBlock {
   align-items: center;
   display: flex;
-  flex-direction: row;
 }
 
 .Online {
