--- a/src/views/Dialog/containers/DialogMessage.scss
+++ b/src/views/Dialog/containers/DialogMessage.scss
@@ -5,8 +5,7 @@
   background-color: $color-gray-100;
   border-radius: 15px;
   display: flex;
-  flex-direction: row;
-  margin: 10px 0 0 0;
+  margin: 10px 0 0;
   max-width: 788px;
   padding: 8px 12px;
 
@@ -20,7 +19,7 @@
 .Status {
   margin: 0 0 0 4px;
 
-  &Variant {
+  &Is {
     &Read {
       color: $color-blue-500;
     }
