--- a/src/views/Dialog/containers/DialogMessage.scss
+++ b/src/views/Dialog/containers/DialogMessage.scss
@@ -5,7 +5,7 @@
   border-radius: 15px;
   display: flex;
   margin: 10px 0 0;
-  max-width: 788px;
+  max-width: 70%;
   padding: 8px 12px;
 
   &Variant {
