--- a/src/views/Dialog/containers/Header.scss
+++ b/src/views/Dialog/containers/Header.scss
@@ -10,26 +10,25 @@
 }
 
 .Action {
-  align-items: center;
-  display: flex;
-}
-
-.Notification,
-.Search {
   border: none;
   margin: 0 30px 0 0;
+}
+
+.Actions {
+  align-items: center;
+  display: flex;
 }
 
 .Info {
   margin: 0 0 0 20px;
 }
 
-.InfoBlock {
-  align-items: center;
-  display: flex;
-}
-
 .Online {
   color: $color-gray-600;
   font-size: 12px;
+}
+
+.Subscriber {
+  align-items: center;
+  display: flex;
 }
