--- a/src/views/Dialog/containers/Header.scss
+++ b/src/views/Dialog/containers/Header.scss
@@ -11,12 +11,15 @@
 
 .Action {
   border: none;
-  margin: 0 30px 0 0;
 }
 
 .Actions {
   align-items: center;
   display: flex;
+}
+
+.Confirm {
+  margin: 0 0 0 24px;
 }
 
 .Info {
