Added a comment rendering condition.

--- a/src/views/Dialog/Dialog.scss
+++ b/src/views/Dialog/Dialog.scss
@@ -1,6 +1,11 @@
+@import '~@styles/colors.scss';
+
 .Root {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0 30px;
+}
+
+.Message {
+  padding: 0 32px;
 }
