--- a/src/views/Dialog/containers/Header.scss
+++ b/src/views/Dialog/containers/Header.scss
@@ -2,24 +2,21 @@
 
 .Root {
   align-items: center;
-  border-bottom: solid 1px $color-gray-100;
+  border-bottom: 2px solid $color-gray-100;
   display: flex;
   height: 80px;
   justify-content: space-between;
-  padding: 24px 0;
+  padding: 0 32px;
 }
 
 .Action {
   border: none;
+  margin: 0 12px 0 0;
 }
 
 .Actions {
   align-items: center;
   display: flex;
-}
-
-.Confirm {
-  margin: 0 0 0 24px;
 }
 
 .Info {
