--- a/src/views/Dialog/containers/Comment.scss
+++ b/src/views/Dialog/containers/Comment.scss
@@ -2,14 +2,14 @@
 
 .Root {
   align-items: center;
-  display: flex;
-  flex-direction: column;
-  margin: 10px 0 0 0;
+  margin: 20px 0;
 }
 
 .Author {
-  font-weight: 600;
-  margin: 0 0 0 10px;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  right: 0;
 }
 
 .Avatar {
@@ -22,29 +22,26 @@
 }
 
 .Header {
+  align-items: center;
   border-bottom: 2px solid $color-green-500;
   display: flex;
-  justify-content: flex-end;
-  padding: 12px 0 22px 0;
+  height: 64px;
+  justify-content: center;
   position: relative;
   width: 100%;
 }
 
-.Info {
-  align-items: center;
-  bottom: 10px;
-  display: flex;
-  position: absolute;
+.Name {
+  font-weight: 600;
+  margin: 0 0 0 10px;
 }
 
 .Text {
-  margin: 16px 0 0 0;
-  max-width: 80%;
+  margin: 16px 60px 0;
   text-align: center;
 }
 
 .Title {
   font-size: 12px;
   font-weight: 600;
-  margin: auto;
 }
