--- a/src/views/Dialog/containers/Message.scss
+++ b/src/views/Dialog/containers/Message.scss
@@ -1,16 +1,14 @@
 @import '~@styles/colors.scss';
 
 .Root {
-  background-color: $color-gray-100;
-  border-radius: 15px;
+  background-color: $color-blue-50;
+  border-radius: 16px;
   display: flex;
-  margin: 10px 0 0;
-  max-width: 80%;
-  padding: 8px 12px;
+  padding: 7px 12px;
 
-  &Variant {
-    &Outcoming {
-      background-color: $color-blue-50;
+  &Is {
+    &Incoming {
+      background-color: $color-gray-100;
     }
   }
 }
