Fixes and refactoring chat files.

--- a/src/views/Chat/Dialog/components/Comment.scss
+++ b/src/views/Chat/Dialog/components/Comment.scss
@@ -12,10 +12,6 @@
   right: 0;
 }
 
-.Avatar {
-  margin: 0 0 0 20px;
-}
-
 .Date {
   color: $color-gray-600;
   font-size: 12px;
@@ -33,7 +29,7 @@
 
 .Name {
   font-weight: 600;
-  margin: 0 0 0 10px;
+  margin: 0 20px 0 10px;
 }
 
 .Text {
