--- a/src/views/Chat/Dialog/components/Group.scss
+++ b/src/views/Chat/Dialog/components/Group.scss
@@ -9,12 +9,12 @@
     &Incoming {
       flex-direction: row-reverse;
 
-      .Messages {
+      .Container {
         align-items: flex-end;
       }
 
-      .Author {
-        text-align: right;
+      .Messages {
+        align-items: flex-end;
       }
     }
   }
@@ -32,6 +32,8 @@
 }
 
 .Container {
+  display: flex;
+  flex-direction: column;
   margin: 0 10px;
   width: 100%;
 }
@@ -40,9 +42,9 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
+  max-width: 80%;
 
   & > *:not(:first-child) {
     margin: 4px 0 0;
-    max-width: 80%;
   }
 }
