--- a/src/views/Chat/Threads/components/Item.scss
+++ b/src/views/Chat/Threads/components/Item.scss
@@ -2,7 +2,8 @@
 
 .Root {
   display: flex;
-  margin: 30px 0 0 0;
+  margin: 30px 0 0;
+  width: 100%;
 }
 
 .Avatar {
@@ -16,6 +17,7 @@
   color: $color-gray-500;
   font-size: 12px;
   font-weight: 600;
+  margin: 0 0 0 4px;
   padding: 2px 8px;
 }
 
@@ -26,17 +28,16 @@
 
 .Info {
   margin: 0 0 0 20px;
-  width: 100%;
+  width: calc(100% - 64px);
 
   & > *:last-child {
-    margin: 2px 0 0 0;
+    margin: 4px 0 0 0;
   }
 }
 
 .Message {
   color: $color-gray-500;
   font-size: 12px;
-  max-width: calc(380px - 170px);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
