--- a/src/views/Main/components/Company.scss
+++ b/src/views/Main/components/Company.scss
@@ -12,6 +12,7 @@
   &Is {
     &Selected {
       .Avatar {
+        border: 2px solid $color-gray-0;
         box-shadow: 0 0 0 4px rgba($color-primary, .4);
       }
 
