--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -56,7 +56,7 @@
 .Source {
   align-items: center;
   background: $color-gray-100;
-  border: 2px solid $color-gray-0;
+  // border: 2px solid $color-gray-0;
   border-radius: 100%;
   display: flex !important;
   font-size: 10px;
