--- a/src/views/Chat/Threads/components/Item.scss
+++ b/src/views/Chat/Threads/components/Item.scss
@@ -1,13 +1,15 @@
 @import '~@styles/colors.scss';
 
 .Root {
+  align-items: center;
   border-radius: 8px;
   color: $color-gray-800;
   display: flex;
-  margin: 10px 0 0;
-  padding: 10px;
+  margin: 8px -12px 0;
+  padding: 12px;
   text-decoration: none;
-  width: 100%;
+  transition: all .2s;
+  width: calc(100% + 24px);
 
   &Is {
     &Selected {
@@ -43,6 +45,7 @@
   height: 20px;
   margin: 0 0 0 4px;
   padding: 0 6px;
+  transition: all .2s;
 }
 
 .Date {
@@ -53,10 +56,6 @@
 .Info {
   margin: 0 0 0 20px;
   width: calc(100% - 64px);
-
-  & > *:last-child {
-    margin: 6px 0 0 0;
-  }
 }
 
 .Message {
@@ -75,4 +74,9 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
+
+  &:nth-child(2) {
+    line-height: 20px;
+    margin: 2px 0 0;
+  }
 }
