--- a/src/views/Chat/Dialog/Dialog.scss
+++ b/src/views/Chat/Dialog/Dialog.scss
@@ -3,9 +3,21 @@
 .Root {
   display: flex;
   flex-direction: column;
+  height: calc(100vh - 180px);
   justify-content: space-between;
 }
 
+.Chat {
+  height: 100%;
+}
+
 .Container {
+  height: calc(100% - 150px);
+  overflow: auto;
   padding: 0 32px;
+}
+
+.Send {
+  border-top: 1px solid black;
+  height: 70px;
 }
